[package]
name = "impl-rlp"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2018"

[dependencies]
rlp = { git="https://github.com/TraceBundy/rlp.git", default-features = false }

[features]
default = ["std"]
std = ["rlp/std"]
